align corrections

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
   --gray: #6c757d;
   --gray-dark: #343a40;
   --primary: #707070;
-  --secondary: #347aae;
+  --secondary: #449BCA;
   --success: #28a745;
   --info: #17a2b8;
   --warning: #ffc107;
@@ -1185,19 +1185,19 @@ pre {
 .table-secondary,
 .table-secondary > th,
 .table-secondary > td {
-  background-color: #c6dae8; }
+  background-color: #cbe3f0; }
 
 .table-secondary th,
 .table-secondary td,
 .table-secondary thead th,
 .table-secondary tbody + tbody {
-  border-color: #95bad5; }
+  border-color: #9ecbe3; }
 
 .table-hover .table-secondary:hover {
-  background-color: #b4cee1; }
+  background-color: #b7d8ea; }
   .table-hover .table-secondary:hover > td,
   .table-hover .table-secondary:hover > th {
-    background-color: #b4cee1; }
+    background-color: #b7d8ea; }
 
 .table-success,
 .table-success > th,
@@ -1797,29 +1797,29 @@ fieldset:disabled a.btn {
 
 .btn-secondary {
   color: #fff;
-  background-color: #347aae;
-  border-color: #347aae; }
+  background-color: #449BCA;
+  border-color: #449BCA; }
   .btn-secondary:hover {
     color: #fff;
-    background-color: #2b6591;
-    border-color: #285e87; }
+    background-color: #3387b5;
+    border-color: #3080ab; }
   .btn-secondary:focus, .btn-secondary.focus {
     color: #fff;
-    background-color: #2b6591;
-    border-color: #285e87;
-    box-shadow: 0 0 0 0.2rem rgba(82, 142, 186, 0.5); }
+    background-color: #3387b5;
+    border-color: #3080ab;
+    box-shadow: 0 0 0 0.2rem rgba(96, 170, 210, 0.5); }
   .btn-secondary.disabled, .btn-secondary:disabled {
     color: #fff;
-    background-color: #347aae;
-    border-color: #347aae; }
+    background-color: #449BCA;
+    border-color: #449BCA; }
   .btn-secondary:not(:disabled):not(.disabled):active, .btn-secondary:not(:disabled):not(.disabled).active,
   .show > .btn-secondary.dropdown-toggle {
     color: #fff;
-    background-color: #285e87;
-    border-color: #25587d; }
+    background-color: #3080ab;
+    border-color: #2e78a1; }
     .btn-secondary:not(:disabled):not(.disabled):active:focus, .btn-secondary:not(:disabled):not(.disabled).active:focus,
     .show > .btn-secondary.dropdown-toggle:focus {
-      box-shadow: 0 0 0 0.2rem rgba(82, 142, 186, 0.5); }
+      box-shadow: 0 0 0 0.2rem rgba(96, 170, 210, 0.5); }
 
 .btn-success {
   color: #fff;
@@ -1999,25 +1999,25 @@ fieldset:disabled a.btn {
       box-shadow: 0 0 0 0.2rem rgba(112, 112, 112, 0.5); }
 
 .btn-outline-secondary {
-  color: #347aae;
-  border-color: #347aae; }
+  color: #449BCA;
+  border-color: #449BCA; }
   .btn-outline-secondary:hover {
     color: #fff;
-    background-color: #347aae;
-    border-color: #347aae; }
+    background-color: #449BCA;
+    border-color: #449BCA; }
   .btn-outline-secondary:focus, .btn-outline-secondary.focus {
-    box-shadow: 0 0 0 0.2rem rgba(52, 122, 174, 0.5); }
+    box-shadow: 0 0 0 0.2rem rgba(68, 155, 202, 0.5); }
   .btn-outline-secondary.disabled, .btn-outline-secondary:disabled {
-    color: #347aae;
+    color: #449BCA;
     background-color: transparent; }
   .btn-outline-secondary:not(:disabled):not(.disabled):active, .btn-outline-secondary:not(:disabled):not(.disabled).active,
   .show > .btn-outline-secondary.dropdown-toggle {
     color: #fff;
-    background-color: #347aae;
-    border-color: #347aae; }
+    background-color: #449BCA;
+    border-color: #449BCA; }
     .btn-outline-secondary:not(:disabled):not(.disabled):active:focus, .btn-outline-secondary:not(:disabled):not(.disabled).active:focus,
     .show > .btn-outline-secondary.dropdown-toggle:focus {
-      box-shadow: 0 0 0 0.2rem rgba(52, 122, 174, 0.5); }
+      box-shadow: 0 0 0 0.2rem rgba(68, 155, 202, 0.5); }
 
 .btn-outline-success {
   color: #28a745;
@@ -3603,13 +3603,13 @@ input[type="button"].btn-block {
 
 .badge-secondary {
   color: #fff;
-  background-color: #347aae; }
+  background-color: #449BCA; }
   a.badge-secondary:hover, a.badge-secondary:focus {
     color: #fff;
-    background-color: #285e87; }
+    background-color: #3080ab; }
   a.badge-secondary:focus, a.badge-secondary.focus {
     outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(52, 122, 174, 0.5); }
+    box-shadow: 0 0 0 0.2rem rgba(68, 155, 202, 0.5); }
 
 .badge-success {
   color: #fff;
@@ -3718,13 +3718,13 @@ input[type="button"].btn-block {
     color: #212121; }
 
 .alert-secondary {
-  color: #1b3f5a;
-  background-color: #d6e4ef;
-  border-color: #c6dae8; }
+  color: #235169;
+  background-color: #daebf4;
+  border-color: #cbe3f0; }
   .alert-secondary hr {
-    border-top-color: #b4cee1; }
+    border-top-color: #b7d8ea; }
   .alert-secondary .alert-link {
-    color: #0f2433; }
+    color: #163343; }
 
 .alert-success {
   color: #155724;
@@ -3981,15 +3981,15 @@ input[type="button"].btn-block {
     border-color: #3a3a3a; }
 
 .list-group-item-secondary {
-  color: #1b3f5a;
-  background-color: #c6dae8; }
+  color: #235169;
+  background-color: #cbe3f0; }
   .list-group-item-secondary.list-group-item-action:hover, .list-group-item-secondary.list-group-item-action:focus {
-    color: #1b3f5a;
-    background-color: #b4cee1; }
+    color: #235169;
+    background-color: #b7d8ea; }
   .list-group-item-secondary.list-group-item-action.active {
     color: #fff;
-    background-color: #1b3f5a;
-    border-color: #1b3f5a; }
+    background-color: #235169;
+    border-color: #235169; }
 
 .list-group-item-success {
   color: #155724;
@@ -4688,12 +4688,12 @@ button.bg-primary:focus {
   background-color: #575757 !important; }
 
 .bg-secondary {
-  background-color: #347aae !important; }
+  background-color: #449BCA !important; }
 
 a.bg-secondary:hover, a.bg-secondary:focus,
 button.bg-secondary:hover,
 button.bg-secondary:focus {
-  background-color: #285e87 !important; }
+  background-color: #3080ab !important; }
 
 .bg-success {
   background-color: #28a745 !important; }
@@ -4783,7 +4783,7 @@ button.bg-dark:focus {
   border-color: #707070 !important; }
 
 .border-secondary {
-  border-color: #347aae !important; }
+  border-color: #449BCA !important; }
 
 .border-success {
   border-color: #28a745 !important; }
@@ -7022,10 +7022,10 @@ a.text-primary:hover, a.text-primary:focus {
   color: #4a4a4a !important; }
 
 .text-secondary {
-  color: #347aae !important; }
+  color: #449BCA !important; }
 
 a.text-secondary:hover, a.text-secondary:focus {
-  color: #225173 !important; }
+  color: #2b7197 !important; }
 
 .text-success {
   color: #28a745 !important; }
@@ -7168,7 +7168,7 @@ nav {
   grid-column: 2/2; }
 
 a {
-  color: #1d435f !important;
+  color: #3080ab !important;
   padding: 1rem;
   font-size: 1.2rem;
   font-weight: bold; }
@@ -7184,14 +7184,25 @@ body {
     padding-bottom: 1rem;
     background-color: #a3a3a3; }
     body main .main-headline {
+      padding-left: 3rem;
+      padding-right: 3rem;
       margin-bottom: 3rem; }
       body main .main-headline .headline-color {
         color: #707070; }
   body .color-darken {
     color: #4a4a4a; }
+  body form {
+    padding: 2rem; }
+
+div h3, div p {
+  padding-left: 2rem;
+  padding-right: 2rem; }
 
 div .table {
   font-size: 11px; }
+
+div ul li p {
+  padding: 0rem; }
 
 footer {
   margin-bottom: 1rem;
@@ -7202,7 +7213,9 @@ footer {
     padding-bottom: 1rem; }
   footer .footer-deco {
     text-align: left;
-    color: #347aae; }
+    color: #449BCA; }
+    footer .footer-deco p {
+      font-weight: bolder; }
 
 header {
   background: #707070;
